<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

    </group>



    <item android:title="Share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/menu_Rate" />


        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/menu_aboutUs" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_person"
                android:title="@string/menu_contactUs" />
        </menu>
    </item>

</menu>
